[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/angelica/Trackers/Timer.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.439216 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.231373, 0.231373, 0.231373, 0.352941 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 30.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 2
outline_color = Color( 0.109804, 0.109804, 0.109804, 0.72549 )
font_data = SubResource( 2 )

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )

[node name="Clock" type="Label" parent="."]
margin_left = 27.2505
margin_right = 98.25
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "00:00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="RichTextLabel" parent="."]
margin_left = 18.0
margin_top = 0.86801
margin_right = 72.0
margin_bottom = 21.868
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/16/23f1.png[/img]"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerB" type="Timer" parent="."]

[node name="closebutton2" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerB" to="." method="_on_TimerB_timeout"]
